# goldnet-godot

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
addons/goldnet/: goldnet.gdextension  goldnet.gdextension.uid  interpolation_buffer.gd  interpolation_buffer.gd.uid  predicted_body.gd  predicted_body.gd.uid  server_clock.gd  server_clock.gd.uid
cmake/: toolchain-android-arm64.cmake
docs/: goldsrc_netcode_plan.md  netsim_plan.md
example/: .gitignore  README.md  main.gd  project.godot
example/.godot/: extension_list.cfg
example/addons/: goldnet
src/: CMakeLists.txt  goldnet_codec.h  goldnet_link.cpp  goldnet_link.h  goldnet_multiplayer.cpp  goldnet_multiplayer.h  register_types.cpp  register_types.h
tests/: CMakeLists.txt  test_codec.cpp  test_seq.cpp  test_support.h
tests/gdscript/: main.gd  project.godot  run.sh  suite.gd
tests/gdscript/suites/: suite_interpolation_buffer.gd  suite_predicted_body.gd  suite_server_clock.gd
tests/integration/: .gitignore  main.gd  project.godot  run.sh  test_case.gd
tests/integration/addons/: goldnet
tests/integration/cases/: case_convergence.gd  case_despawn.gd  case_jitter.gd  case_multipeer.gd  case_pvs_per_peer.gd  case_quant.gd  case_relevance.gd  case_ring_expiry.gd  case_types.gd  types_entity.gd
